crates/swc_ecma_parser/tests/test262-error-references/fail/531ee852cc8ed0a7.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/531ee852cc8ed0a7.js:1:2
  |
1 | [...0,a]=0
  |  ^^^^

